<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_29sdp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Guideline to divide the screen into 70% and 30% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/or_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_arrow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/rounded_gradient_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_arrow">

            <TextView
                android:id="@+id/create_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="#303030"
                android:textSize="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="14dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="#F2F2F2"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_account_text" />

            <EditText
                android:id="@+id/number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="14dp"
                android:autofillHints="mobile"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="#F2F2F2"
                android:hint="@string/mobile"
                android:inputType="number"
                android:padding="10dp"
                android:textColorHint="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="#F2F2F2"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="#F2F2F2"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="#F2F2F2"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/back_ground_gradient"
                android:text="@string/create_account"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

            <TextView
                android:id="@+id/not_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_85sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/not_new_user"
                android:textColor="#323264"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_account_button" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_87sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/signin"
                android:textColor="#00B4FF"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_account_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/or_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_with"
        android:textColor="#323264"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/ic_linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/ic_linkedin"
        app:layout_constraintEnd_toStartOf="@+id/ic_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/or_sign_up" />

    <ImageView
        android:id="@+id/ic_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/ic_gmail"
        app:layout_constraintEnd_toStartOf="@+id/ic_facebook"
        app:layout_constraintStart_toStartOf="@id/ic_linkedin"
        app:layout_constraintTop_toTopOf="@+id/or_sign_up" />

    <ImageView
        android:id="@+id/ic_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_58sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/ic_mail"
        app:layout_constraintTop_toTopOf="@+id/or_sign_up" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_100sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/continue_as_guest"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>